--- a/notifico/templates/base/nav.html
+++ b/notifico/templates/base/nav.html
@@ -1,4 +1,4 @@
-<div id="site-navbar" class="navbar navbar-fixed-top">
+<div id="site-navbar" class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
 
