Small tweak to icon position offsets in mini-buttons; Use edit hook button for consistency.

--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -5955,6 +5955,9 @@ section > p:last-child {
 [class^="icon-"] {
   margin-top: 3px;
 }
+.btn-mini [class^="icon-"] {
+  margin-top: 1px;
+}
 .pull-right {
   float: right;
 }
