--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -171,3 +171,9 @@ section {
 [class^="icon-"] {
     margin-top: 3px;
 }
+
+.btn-mini {
+    [class^="icon-"] {
+        margin-top: 1px;
+    }
+}
