--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -24,7 +24,7 @@
     <td nowrap>
       <div class="pull-right">
         <a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}" class="btn btn-mini">
-          Edit Project
+          <i class="icon-pencil"></i> Edit Project
         </a>
         <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', u=user.username, p=project.name) }}">
           <i class="icon-trash icon-white"></i> Delete
