--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -47,7 +47,9 @@
           <div class="pull-right">
             {% if is_owner %}
             <a href="{{ url_for('.new') }}" class="btn btn-success">New Project</a>
+            {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
             <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Import From Github</a>
+            {% endif %}
             {% endif %}
           </div>
           <div style="clear: both;"></div>
