Don't require a password when deleting projects.

--- a/notifico/views/projects/templates/delete_project.html
+++ b/notifico/views/projects/templates/delete_project.html
@@ -9,11 +9,9 @@
       </header>
       <div class="content">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-          <p>If you're sure you want to delete the project <strong>{{ project.name }}</strong> enter your password.</p>
-          {{ form.hidden_tag() }}
-          {{ forms.render_field(form.password) }}
+          <p>Are you sure you want to delete the project <strong>{{ project.name }}</strong>?</p>
           <div class="form-actions">
-            <button type="submit" class="btn btn-danger">Delete Project</button>
+            <button type="submit" class="btn btn-danger" value="d" name="do">Delete Project</button>
             <a href="{{ url_for('.overview', u=g.user.username) }}" class="btn btn-success">Cancel</a>
           </div>
         </form>
