--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -50,7 +50,7 @@
             {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
             {# Importing from github is only enabled if you've added the OAuth tokens required for
                the API #}
-            <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Import From Github</a>
+            <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Sync With Github</a>
             {% endif %}
             {% endif %}
           </div>
