Popular -> top (consistency)

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -130,7 +130,7 @@
     <div class="span6">
       <section>
         <header>
-          <h2>Popular Services</h2>
+          <h2>Top Services</h2>
         </header>
         <div class="content">
           <table class="table table-striped">
