--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -17,6 +17,7 @@
                 <th>Created</th>
                 <th>Name</th>
                 <th>Messages</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -28,6 +29,13 @@
                 <td nowrap>{{ project.created|pretty }}</td>
                 <td style="width: 100%;">{{ link_p(project) }}</td>
                 <td style="text-align: center;">{{ project.message_count }}</td>
+                <td nowrap>
+                  <div class="pull-right">
+                    <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', pid=project.id) }}">
+                      <i class="icon-trash icon-white"></i> Delete
+                    </a>
+                  </div>
+                </td>
               </tr>
               {% endfor %}
             </tbody>
