--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -23,6 +23,39 @@
   </style>
 {% endblock %}
 
+{% block script %}
+  {{ super() }}
+  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="excanvas.min.js"></script><![endif]-->
+  <script type="text/javascript" src="/js/jquery.flot.js"></script>
+  <script type="text/javascript" src="/js/jquery.flot.resize.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $.plot(
+      "#projects-placeholder",
+      // Graph Data
+      [{
+        'data': {{ projects_graph_data|tojson|safe }},
+        'color': '#2E8DEF'
+      }],
+      // Options
+      {
+        // Format the xaxis for timestamps
+        'xaxis': {
+          'mode': "time",
+          'timeformat': "%b/%d",
+          'tickColor': 'transparent'
+        },
+        // Give a bit of padding between the chart and axis labels
+        'grid': {
+          'borderColor': 'transparent',
+          'borderWidth': 20
+        }
+      }
+    );
+  });
+  </script>
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
   {% if not g.user %}
@@ -127,30 +160,13 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span6">
+    <div class="span12">
       <section>
         <header>
-          <h2>Top Services</h2>
+          <h2>Projects</h2>
         </header>
         <div class="content">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>Service</th>
-                <th>Count</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for service_id, count in popular_services %}
-              <tr>
-                <td style="width: 100%;">{{ services[service_id].SERVICE_NAME }}</td>
-                <td  style="text-align: center;">
-                  {{ count }}
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+          <div id="projects-placeholder" style="width: 100%; height: 200px;"></div>
         </div>
       </section>
     </div>
