--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -17,6 +17,7 @@ html, body, p {
 
 .padfix {
     overflow: auto;
+    padding-top: 60px;
     padding-bottom: 40px;
 }
 
@@ -117,8 +118,9 @@ section {
     @backgroundColor: #FAFAFA;
 
     .navbar-inner {
-        #gradient > .vertical(#FAFAFA, #EFEFEF);
+        #gradient > .vertical(#F1F1F1, #F1F1F1);
         border-bottom: 1px solid #DDD;
+        .border-radius(0);
 
         .nav {
             li > a {
