--- a/notifico/views/pimport/templates/github.html
+++ b/notifico/views/pimport/templates/github.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
     {% if summary is none %}
     <form class="form form-horizontal" method='POST' action="{{ url_for('.github') }}">
     <div class="row-fluid">
