--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -16,9 +16,9 @@
   }
   </style>
 {% endblock %}
-  
+
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
   <div class="row-fluid">
     <div class="span12">
       <h2>
