--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -2,7 +2,7 @@
 {% from "page.html" import render_pagination, link_p %}
 
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
   <div class="row-fluid">
     <div class="span12">
       <section>
