--- a/notifico/views/public/templates/services.html
+++ b/notifico/views/public/templates/services.html
@@ -16,7 +16,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container">
   <div class="row-fluid">
     <div class="span12">
       <section>
