--- a/notifico/views/account/templates/settings.html
+++ b/notifico/views/account/templates/settings.html
@@ -1,7 +1,7 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
     <div class="row-fluid">
         <div class="span12">
             <section>
