--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -2,7 +2,7 @@
 {% from 'page.html' import render_pagination, link_p %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container">
   <div class="row-fluid">
     <div class="span12">
       <section>
