--- a/notifico/views/projects/templates/new_hook.html
+++ b/notifico/views/projects/templates/new_hook.html
@@ -17,7 +17,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
   <div class="row-fluid">
     <div class="span12">
       <section>
