--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -36,7 +36,7 @@
 {% endmacro %}
 
 {% block content %}
-<div class="container-fluid page-content">
+<div class="container page-content">
   <div class="row-fluid">
     <div class="span12">
       <section>
