--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -75,25 +75,25 @@
     <div class="span3 metric">
       <section>
         <strong>{{ total_messages }}</strong>
-        <small class="muted"># of Messages</small>
+        <small class="muted">Messages</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_projects }}</strong>
-        <small class="muted"># of Projects</small>
+        <small class="muted">Projects</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_users }}</strong>
-        <small class="muted"># of Users</small>
+        <small class="muted">Users</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_channels }}</strong>
-        <small class="muted"># of Channels</small>
+        <small class="muted">Channels</small>
       </section>
     </div>
   </div>
