--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -2,7 +2,7 @@
 
 html, body {
   background-color: #E8E8E8;
-  background-image: url('/img/groovepaper.png');
+  background-image: url('/img/pw_maze_white.png');
   height: 100%;
 }
 
@@ -26,8 +26,6 @@ html, body, p {
     margin-top: -40px;
     clear: both;
 
-    border-top: 1px solid #AAA;
-    background-color: white;
     padding-top: 10px;
     padding-bottom: 8px;
     font-size: 75%;
