--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="span12" style="text-align: right;">
             Copyright &copy; <span class="current_year">2013</span> Tyler Kennedy
-            | <a href="https://github.com/TkTech/notifico">Get The Source</a>
+            | <a href="https://github.com/TkTech/notifico">Get The Code</a>
           </div>
         </div>
       </div>
