New visibility filter; private projects visible on all projects and newest projects to admins and their creators.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -115,10 +115,13 @@
               </tr>
             </thead>
             <tbody>
-              {% for project in public_projects %}
+              {% for project in new_projects %}
               <tr>
                 <td nowrap>{{ project.created|pretty }}</td>
-                <td style="width: 100%;">{{ link_p(project) }}</td>
+                <td style="width: 100%;">
+                  {% if not project.public %}<i class="icon-lock"></i>{% endif %}
+                  {{ link_p(project) }}
+                </td>
                 <td style="text-align: center;">{{ project.message_count }}</td>
               </tr>
               {% endfor %}
