Add spaces between user / project (looks better) and show username on user overview

--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -39,6 +39,13 @@
 <div class="container page-content">
   <div class="row-fluid">
     <div class="span12">
+      <h2>
+        {{ user.username }}</a>
+      </h2>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span12">
       <section>
         <header>
           <div class="pull-left">
