--- a/notifico/templates/base/user-nav.html
+++ b/notifico/templates/base/user-nav.html
@@ -6,7 +6,7 @@
   
   <li class="{{ active('public.landing') }}">
     <a href="{{ url_for('public.landing') }}">
-      <i class="icon-home"></i>
+      <i class="icon-home"></i> Home
     </a>
   </li>
 
