--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -11,43 +11,39 @@ html, body, p {
 }
 
 .wrapper {
-    min-height: 100%;
-    position: relative;
+  min-height: 100%;
+  position: relative;
 }
 
 .padfix {
-    overflow: auto;
-    padding-top: 60px;
-    padding-bottom: 40px;
+  overflow: auto;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 @media (max-width: 979px) {
-    .padfix {
-        padding-top: 0px;
-    }
+  .padfix {
+    padding-top: 0px;
+  }
 }
 
 .footer {
-    position: relative;
-    margin-top: -40px;
-    clear: both;
+  position: relative;
+  margin-top: -40px;
+  clear: both;
 
-    padding-top: 10px;
-    padding-bottom: 8px;
-    font-size: 75%;
-}
-
-/* Death to the rounds! */
-.btn,
-.alert,
-.square {
-  .border-radius(0);
+  padding-top: 10px;
+  padding-bottom: 8px;
+  font-size: 75%;
 }
 
 .table-vertical td {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
+.btn,
+.alert,
+.square,
 select,
 textarea,
 input[type="text"],
@@ -68,119 +64,136 @@ input[type="color"],
   .border-radius(0px);
 }
 
-.form-actions {
+form {
+  .form-actions {
     background: transparent;
-}
+  }
 
-.required {
+  .required {
     color: red;
+  }
 }
 
 .homepage-unit {
-    background-color: white;
-    border: 1px solid #AAA;
-    .border-radius(4px);
-    .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
-    #gradient > .vertical(#F9F9F9, #EDEDED);
+  background-color: white;
+  border: 1px solid #AAA;
+  .border-radius(0px);
+  .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
+  #gradient > .vertical(#F9F9F9, #EDEDED);
 }
 
 /* Nixed from Genghis */
 section {
-    background-color: white;
-    margin:  20px 0;
-    padding: 20px;
-    border: 1px solid #AAA;
-    .border-radius(0);
-    .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
+  background-color: white;
+  margin:  20px 0;
+  padding: 20px;
+  border: 1px solid #AAA;
+  .border-radius(0);
+  .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
 
-    > header {
-        .border-radius(4px 4px 0 0);
-        margin: -20px -20px 20px;
-        padding: 9px 20px;
-        background-color: #f5f5f5;
-        border-bottom: 1px solid #ddd;
-        .box-shadow(inset 0 1px 0 white);
+  > header {
+    .border-radius(4px 4px 0 0);
+    margin: -20px -20px 20px;
+    padding: 9px 20px;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
+    .box-shadow(inset 0 1px 0 white);
 
-        h2 {
-            font-size:   24px;
-            margin:      0;
-            line-height: 30px;
-        }
+    h2 {
+      font-size:   24px;
+      margin:      0;
+      line-height: 30px;
     }
-
-    > p:first-child {
-        margin-top: 0;
+    h3 {
+      font-size:   14px;
+      margin:      0;
+      line-height: 20px;
     }
+  }
 
-    > p:last-child {
-        margin-bottom: 0;
-    }
+  > p:first-child {
+    margin-top: 0;
+  }
+
+  > p:last-child {
+    margin-bottom: 0;
+  }
 }
 
 #site-navbar {
-    @textColor: #666;
-    @textHoverColor: #999;
-    @backgroundColor: #FAFAFA;
+  @textColor: #666;
+  @textHoverColor: #999;
+  @backgroundColor: #FAFAFA;
 
-    .navbar-inner {
-        #gradient > .vertical(#F1F1F1, #F1F1F1);
-        border-bottom: 1px solid #DDD;
-        .border-radius(0);
+  .navbar-inner {
+    #gradient > .vertical(#F1F1F1, #F1F1F1);
+    border-bottom: 1px solid #DDD;
+    .border-radius(0);
 
-        .nav {
-            li > a {
-                text-shadow: none;
-                color: @textColor;
+    .nav {
+      li > a {
+        text-shadow: none;
+        color: @textColor;
 
-                &:hover {
-                    color: @textHoverColor;
-                }
-            }
+        &:hover {
+          color: @textHoverColor;
         }
-
-        .brand {
-            text-shadow: none;
-            &:hover {
-                color: @textColor;
-            }
-        }
-
-        .nav > .active > a,
-        .navbar .nav > .active > a:hover,
-        .navbar .nav > .active > a:focus {
-            #gradient > .vertical(#FAFAFA, #EFEFEF);
-            color: @textHoverColor;
-        }
-
-        .nav li.dropdown.open > .dropdown-toggle,
-        .navbar .nav li.dropdown.active > .dropdown-toggle,
-        .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-            #gradient > .vertical(#FAFAFA, #EFEFEF);
-            color: @textHoverColor;
-        }
-
-        .dropdown-menu {
-            .border-radius(0);
-        }
+      }
     }
+
+    .brand {
+      text-shadow: none;
+      &:hover {
+        color: @textColor;
+      }
+    }
+
+    .nav > .active > a,
+    .navbar .nav > .active > a:hover,
+    .navbar .nav > .active > a:focus {
+      #gradient > .vertical(#FAFAFA, #EFEFEF);
+      color: @textHoverColor;
+    }
+
+    .nav li.dropdown.open > .dropdown-toggle,
+    .navbar .nav li.dropdown.active > .dropdown-toggle,
+    .navbar .nav li.dropdown.open.active > .dropdown-toggle {
+      #gradient > .vertical(#FAFAFA, #EFEFEF);
+      color: @textHoverColor;
+    }
+
+    .dropdown-menu {
+      .border-radius(0);
+    }
+  }
 }
 
 .table-square {
-    border: 1px solid #ddd;
+  border: 1px solid #ddd;
 }
 
 .metric {
-    section {
-        #gradient > .vertical(#F9F9F9, #EDEDED);
-    }
+  text-align: center;
+
+  section {
+    #gradient > .vertical(#F9F9F9, #EDEDED);
+  }
+  
+  strong {
+    display: block;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    font-size: 32px;
+    font-weight: 200;
+  }
 }
 
 [class^="icon-"] {
-    margin-top: 3px;
+  margin-top: 3px;
 }
 
 .btn-mini {
-    [class^="icon-"] {
-        margin-top: 1px;
-    }
+  [class^="icon-"] {
+    margin-top: 1px;
+  }
 }
