--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -1,5 +1,5 @@
 {% extends "base/body.html" %}
-{% from 'page.html' import render_pagination, link_p %}
+{% from 'page.html' import render_pagination %}
 
 {% block content %}
 <div class="container">
@@ -23,8 +23,7 @@
               <tr>
                 <td nowrap>{{ project.created|pretty }}</td>
                 <td style="width: 100%;">
-                  {% if not project.public %}<i class="icon-lock"></i>{% endif %}
-                  {{ link_p(project) }}
+                  {{ repo_link(project) }}
                 </td>
                 <td style="text-align: center;">{{ project.message_count }}</td>
               </tr>
