--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -1,3 +1,13 @@
+{% macro repo_link(project) %}
+{% if not project.public %}
+<i class="icon-lock"></i>
+{% endif %}
+<a href="{{ url_for('projects.overview', u=project.owner.username) }}">
+  {{ project.owner.username }}
+</a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+  {{ project.name }}
+</a>
+{% endmacro %}
 
 <!DOCTYPE html>
 <html lang="en">
