--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -8,20 +8,17 @@
       <h2>
         <a href="{{ url_for('.overview', u=project.owner.username) }}">{{ project.owner.username }}</a> / {{ project.name }}
       </h2>
-    </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span6 metric">
-      <section>
-        <strong>{{ project.message_count }}</strong>
-        <small class="muted">Messages</small>
-      </section>
-    </div>
-    <div class="span6 metric">
-      <section>
-        <strong>{{ project.channels.count() }}</strong>
-        <small class="muted">Channels</small>
-      </section>
+      <ul class="unstyled">
+        <li>
+          <i class="icon-time"></i> Created {{ project.created|pretty }}
+        </li>
+        {% if project.website %}
+        <li>
+          <i class="icon-globe"></i>
+          {{ project.website|fixlink|urlize(80, true) }}
+        </li>
+        {% endif %}
+      </ul>
     </div>
   </div>
   {% if is_owner %}
