--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -2158,7 +2158,10 @@ table {
 }
 .table th,
 .table td {
-  padding: 8px;
+  padding-left: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 0px;
   line-height: 20px;
   text-align: left;
   vertical-align: top;
