--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -2158,7 +2158,7 @@ table {
 }
 .table th,
 .table td {
-  padding: 8px 0px 8px 8px;
+  padding: 8px;
   line-height: 20px;
   text-align: left;
   vertical-align: top;
@@ -5767,7 +5767,7 @@ a.badge:hover {
 html,
 body {
   background-color: #E8E8E8;
-  background-image: url('/img/pw_maze_white.png');
+  background-image: url('/img/subtle_grunge.png');
   height: 100%;
 }
 html,
@@ -5778,16 +5778,7 @@ p {
 .wrapper {
   min-height: 100%;
   position: relative;
-}
-.padfix {
   overflow: auto;
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-@media (max-width: 979px) {
-  .padfix {
-    padding-top: 0px;
-  }
 }
 .footer {
   position: relative;
@@ -5799,6 +5790,7 @@ p {
 }
 .table-vertical td {
   vertical-align: middle;
+  border-top: none;
 }
 .btn,
 .alert,
@@ -5848,105 +5840,6 @@ form .required {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffededed', GradientType=0);
 }
-/* Nixed from Genghis */
-section {
-  background-color: white;
-  margin: 20px 0;
-  padding: 20px;
-  border: 1px solid #AAA;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
-  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
-}
-section > header {
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0;
-  margin: -20px -20px 20px;
-  padding: 9px 20px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
-  -webkit-box-shadow: inset 0 1px 0 #ffffff;
-  -moz-box-shadow: inset 0 1px 0 #ffffff;
-  box-shadow: inset 0 1px 0 #ffffff;
-}
-section > header h2 {
-  font-size: 24px;
-  margin: 0;
-  line-height: 30px;
-}
-section > header h3 {
-  font-size: 14px;
-  margin: 0;
-  line-height: 20px;
-}
-section > p:first-child {
-  margin-top: 0;
-}
-section > p:last-child {
-  margin-bottom: 0;
-}
-#site-navbar .navbar-inner {
-  background-color: #f1f1f1;
-  background-image: -moz-linear-gradient(top, #f1f1f1, #f1f1f1);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f1f1f1), to(#f1f1f1));
-  background-image: -webkit-linear-gradient(top, #f1f1f1, #f1f1f1);
-  background-image: -o-linear-gradient(top, #f1f1f1, #f1f1f1);
-  background-image: linear-gradient(to bottom, #f1f1f1, #f1f1f1);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff1f1f1', endColorstr='#fff1f1f1', GradientType=0);
-  border-bottom: 1px solid #DDD;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-#site-navbar .navbar-inner .nav li > a {
-  text-shadow: none;
-  color: #666666;
-}
-#site-navbar .navbar-inner .nav li > a:hover {
-  color: #999999;
-}
-#site-navbar .navbar-inner .brand {
-  text-shadow: none;
-}
-#site-navbar .navbar-inner .brand:hover {
-  color: #666666;
-}
-#site-navbar .navbar-inner .nav > .active > a,
-#site-navbar .navbar-inner .navbar .nav > .active > a:hover,
-#site-navbar .navbar-inner .navbar .nav > .active > a:focus {
-  background-color: #f6f6f6;
-  background-image: -moz-linear-gradient(top, #fafafa, #efefef);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#efefef));
-  background-image: -webkit-linear-gradient(top, #fafafa, #efefef);
-  background-image: -o-linear-gradient(top, #fafafa, #efefef);
-  background-image: linear-gradient(to bottom, #fafafa, #efefef);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffafafa', endColorstr='#ffefefef', GradientType=0);
-  color: #999999;
-}
-#site-navbar .navbar-inner .nav li.dropdown.open > .dropdown-toggle,
-#site-navbar .navbar-inner .navbar .nav li.dropdown.active > .dropdown-toggle,
-#site-navbar .navbar-inner .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: #f6f6f6;
-  background-image: -moz-linear-gradient(top, #fafafa, #efefef);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#efefef));
-  background-image: -webkit-linear-gradient(top, #fafafa, #efefef);
-  background-image: -o-linear-gradient(top, #fafafa, #efefef);
-  background-image: linear-gradient(to bottom, #fafafa, #efefef);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffafafa', endColorstr='#ffefefef', GradientType=0);
-  color: #999999;
-}
-#site-navbar .navbar-inner .dropdown-menu {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
 .table-square {
   border: 1px solid #ddd;
 }
@@ -5975,6 +5868,66 @@ section > p:last-child {
 }
 .btn-mini [class^="icon-"] {
   margin-top: 1px;
+}
+.nav-top {
+  padding-top: 20px;
+}
+.navbar-inner {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+/* Nixed from Genghis */
+section {
+  background-color: white;
+  margin: 20px 0;
+  padding: 20px;
+  border: 1px solid #d4d4d4;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
+  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
+}
+section > header {
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  margin: -20px -20px 20px;
+  padding: 9px 20px;
+  background-color: #f5f5f5;
+  background-color: #fafafa;
+  background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
+  border-bottom: 1px solid #ddd;
+  -webkit-box-shadow: inset 0 1px 0 #ffffff;
+  -moz-box-shadow: inset 0 1px 0 #ffffff;
+  box-shadow: inset 0 1px 0 #ffffff;
+}
+section > header h2 {
+  font-size: 24px;
+  margin: 0;
+  line-height: 30px;
+}
+section > header h3 {
+  font-size: 14px;
+  margin: 0;
+  line-height: 20px;
+}
+section > p:first-child {
+  margin-top: 0;
+}
+section > p:last-child {
+  margin-bottom: 0;
+}
+.content {
+  padding-bottom: 20px;
 }
 .pull-right {
   float: right;
