--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -31,65 +31,56 @@
 {% endmacro %}
 
 {% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <h2>
-        {{ user.username }}</a>
-      </h2>
-    </div>
-  </div>
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <div class="pull-left">
-            <h2>Projects</h2>
-          </div>
-          <div class="pull-right">
-            {% if is_owner %}
-            <a href="{{ url_for('.new') }}" class="btn btn-success">New Project</a>
-            {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
-            {# Importing from github is only enabled if you've added the OAuth tokens required for
-               the API #}
-            <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Sync With Github</a>
-            {% endif %}
-            {% endif %}
-          </div>
-          <div style="clear: both;"></div>
-        </header>
-        <div class="content">
-          {% if not projects.count() %}
-          <div class="alert alert-info">
-            {% if is_owner %}
-            You have not created any projects yet.
-            {% else %}
-            This user does not have any public projects.
-            {% endif %}
-          </div>
-          {% else %}
-          <table class="table table-striped table-vertical">
-            <thead>
-              <tr>
-                <th>Project</th>
-                <th style="text-align: center;">Messages</th>
-                <th style="text-align: center;">Channels</th>
-                <th style="text-align: center;">Hooks</th>
-                {% if is_owner %}
-                <th></th>
-                {% endif %}
-              </tr>
-            </thead>
-            <tbody>
-              {% for project in projects %}
-              {{ row(project) }}
-              {% endfor %}
-            </tbody>
-          </table>
+<div class="row">
+  <div class="span12">
+    <section>
+      <header>
+        <div class="pull-left">
+          <h2>Projects</h2>
+        </div>
+        <div class="pull-right">
+          {% if is_owner %}
+          <a href="{{ url_for('.new') }}" class="btn btn-success">New Project</a>
+          {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
+          {# Importing from github is only enabled if you've added the OAuth tokens required for
+             the API #}
+          <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Sync With Github</a>
+          {% endif %}
           {% endif %}
         </div>
-      </section>
-    </div>
+        <div style="clear: both;"></div>
+      </header>
+      <div class="content">
+        {% if not projects.count() %}
+        <div class="alert alert-info">
+          {% if is_owner %}
+          You have not created any projects yet.
+          {% else %}
+          This user does not have any public projects.
+          {% endif %}
+        </div>
+        {% else %}
+        <table class="table table-striped table-vertical">
+          <thead>
+            <tr>
+              <th>Project</th>
+              <th style="text-align: center;">Messages</th>
+              <th style="text-align: center;">Channels</th>
+              <th style="text-align: center;">Hooks</th>
+              {% if is_owner %}
+              <th></th>
+              {% endif %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for project in projects %}
+            {{ row(project) }}
+            {% endfor %}
+          </tbody>
+        </table>
+        {% endif %}
+      </div>
+    </section>
   </div>
 </div>
 {% endblock %}
