--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -1,38 +1,5 @@
 {% extends "base/body.html" %}
 
-{% block script %}
-  {{ super() }}
-  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="excanvas.min.js"></script><![endif]-->
-  <script type="text/javascript" src="/js/jquery.flot.js"></script>
-  <script type="text/javascript" src="/js/jquery.flot.resize.js"></script>
-  <script type="text/javascript">
-  $(document).ready(function(){
-    $.plot(
-      "#projects-placeholder",
-      // Graph Data
-      [{
-        'data': {{ projects_graph_data|tojson|safe }},
-        'color': '#2E8DEF'
-      }],
-      // Options
-      {
-        // Format the xaxis for timestamps
-        'xaxis': {
-          'mode': "time",
-          'timeformat': "%b/%d",
-          'tickColor': 'transparent'
-        },
-        // Give a bit of padding between the chart and axis labels
-        'grid': {
-          'borderColor': 'transparent',
-          'borderWidth': 20
-        }
-      }
-    );
-  });
-  </script>
-{% endblock %}
-
 {% block content %}
 <div class="container">
   {% if not g.user %}
@@ -48,33 +15,6 @@
   </div>
   {% endif %}
 
-  <div class="row-fluid hidden-phone">
-    <div class="span3 metric">
-      <section>
-        <strong>{{ total_messages }}</strong>
-        <small class="muted">Messages</small>
-      </section>
-    </div>
-    <div class="span3 metric">
-      <section>
-        <strong>{{ total_projects }}</strong>
-        <small class="muted">Projects</small>
-      </section>
-    </div>
-    <div class="span3 metric">
-      <section>
-        <strong>{{ total_users }}</strong>
-        <small class="muted">Users</small>
-      </section>
-    </div>
-    <div class="span3 metric">
-      <section>
-        <strong>{{ total_channels }}</strong>
-        <small class="muted">Channels</small>
-      </section>
-    </div>
-  </div>
-
   <div class="row-fluid">
     <div class="span6">
       {# Show recently sent messages from public channels. #}
@@ -83,7 +23,7 @@
           <h3>Newest Projects</h3>
         </header>
         <div class="content">
-          <table class="table table-striped">
+          <table class="table table-striped table-vertical">
             <thead>
               <tr>
                 <th>Created</th>
@@ -113,7 +53,7 @@
           <h3>Top Networks</h3>
         </header>
         <div class="content">
-          <table class="table table-striped">
+          <table class="table table-striped table-vertical">
             <thead>
               <tr>
                 <th>Host</th>
@@ -133,19 +73,6 @@
               {% endfor %}
             </tbody>
           </table>
-        </div>
-      </section>
-    </div>
-  </div>
-
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <h3>Projects</h3>
-        </header>
-        <div class="content">
-          <div id="projects-placeholder" style="width: 100%; height: 200px;"></div>
         </div>
       </section>
     </div>
