Consistent border on hero unit

--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -5824,7 +5824,7 @@ form .required {
 }
 .homepage-unit {
   background-color: white;
-  border: 1px solid #AAA;
+  border: 1px solid #d4d4d4;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
