--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -66,7 +66,7 @@ form {
 
 .homepage-unit {
   background-color: white;
-  border: 1px solid #AAA;
+  border: 1px solid #d4d4d4;
   .border-radius(0px);
   .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
   #gradient > .vertical(#F9F9F9, #EDEDED);
