--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 <div class="container">
-  <div class="row-fluid">
+  <div class="row">
     <div class="span12">
       <section>
         <header>
-          <h2>All Projects</h2>
+          <h3>All Projects</h3>
         </header>
         <div class="content">
           <table class="table table-striped">
