Top networks now shows *unique* channles per network.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -64,7 +64,7 @@
               {% for network, count in popular_networks %}
               <tr>
                 <td style="width: 100%;">{{ network }}</td>
-                <td  style="text-align: center;">
+                <td  nowrap style="text-align: center;">
                   <a href="{{ url_for('.channels', network=network) }}">
                     {{ count }}
                   </a>
