--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -32,7 +32,7 @@
               </tr>
             </thead>
             <tbody>
-              {% for project in new_projects %}
+              {% for project in new_projects.items %}
               <tr>
                 <td nowrap>{{ project.created|pretty }}</td>
                 <td style="width: 100%;">
@@ -43,7 +43,7 @@
               {% endfor %}
             </tbody>
           </table>
-          <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ total_projects }} Projects</a>
+          <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ new_projects.total }} Projects</a>
         </div>
       </section>
     </div>
