--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -23,12 +23,12 @@
               <tr>
                 <td style="width: 100%;">{{ network }}</td>
                 <td nowrap style="text-align: center;">
-                  <a href="{{ url_for('.channels', network=network) }}">
+                  <a href="{{ url_for('.network', network=network) }}">
                     {{ di_count }}
                   </a>
                 </td>
                 <td nowrap style="text-align: center;">
-                  <a href="{{ url_for('.channels', network=network) }}">
+                  <a href="{{ url_for('.network', network=network) }}">
                     {{ count }}
                   </a>
                 </td>
