--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -65,7 +65,7 @@
               <tr>
                 <td style="width: 100%;">{{ network }}</td>
                 <td  nowrap style="text-align: center;">
-                  <a href="{{ url_for('.channels', network=network) }}">
+                  <a href="{{ url_for('.network', network=network) }}">
                     {{ count }}
                   </a>
                 </td>
