Table styling; Show locks beside private channel names (for admins)

--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -30,7 +30,7 @@
               {% for channel in pagination.items %}
               <tr>
                 <td nowrap>{{ channel.created|pretty }}</td>
-                <td nowrap>{{ channel.channel }}</td>
+                <td nowrap>{% if not channel.public %}<i class="icon-lock"></i> {% endif %}{{ channel.channel }}</td>
                 <td nowrap>{{ channel.host }}</td>
                 <td>{{ channel.port }}</td>
                 <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
