--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -10,7 +10,7 @@
           <h3>Networks</h3>
         </header>
         <div class="content">
-          <table class="table table-striped">
+          <table class="table table-striped table-vertical">
             <thead>
               <tr>
                 <th>Host</th>
