--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -152,3 +152,20 @@ section {
 .content {
   padding-bottom: 20px;
 }
+
+
+// Overview page elements
+.project {
+  margin-bottom: 12px;
+  border-bottom: 1px dashed #f9f9f9;
+  padding-top: 4px;
+  padding-bottom: 4px;
+
+  .name {
+    font-size: 16px;
+  }
+
+  .metric {
+
+  }
+}
