--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -1,34 +1,4 @@
 {% extends "base/body.html" %}
-{% import "forms.html" as forms %}
-
-{% macro row(project) %}
-  <tr>
-    <td style="width: 100%;">
-      {{ repo_link(project) }}
-    </td>
-    <td style="text-align: center;">{{ project.message_count }}</td>
-    <td style="text-align: center;">
-      {% if is_owner %}
-      {{ project.channels.count() }}
-      {% else %}
-      {{ project.channels.filter_by(public=True).count() }}
-      {% endif %}
-    </td>
-    <td style="text-align: center;">{{ project.hooks.count() }}</td>
-    {% if is_owner %}
-    <td nowrap>
-      <div class="pull-right">
-        <a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}" class="btn btn-mini">
-          <i class="icon-pencil"></i> Edit Project
-        </a>
-        <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', u=user.username, p=project.name) }}">
-          <i class="icon-trash icon-white"></i> Delete
-        </a>
-      </div>
-    </td>
-    {% endif %}
-  </tr>
-{% endmacro %}
 
 {% block content %}
 <div class="row">
@@ -36,15 +6,15 @@
     <section>
       <header>
         <div class="pull-left">
-          <h2>Projects</h2>
+          <h2>Projects ({{ projects.count() }})</h2>
         </div>
         <div class="pull-right">
           {% if is_owner %}
-          <a href="{{ url_for('.new') }}" class="btn btn-success">New Project</a>
+          <a href="{{ url_for('.new') }}" class="btn btn-success"><i class="icon-plus"></i> New Project</a>
           {% if config.SERVICE_GITHUB_CLIENT_ID and config.SERVICE_GITHUB_CLIENT_SECRET %}
           {# Importing from github is only enabled if you've added the OAuth tokens required for
              the API #}
-          <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Sync With Github</a>
+          <a href="{{ url_for('pimport.github') }}" class="btn btn-info"><i class="icon-github-alt"></i> Sync With Github</a>
           {% endif %}
           {% endif %}
         </div>
@@ -52,32 +22,35 @@
       </header>
       <div class="content">
         {% if not projects.count() %}
-        <div class="alert alert-info">
-          {% if is_owner %}
-          You have not created any projects yet.
-          {% else %}
-          This user does not have any public projects.
-          {% endif %}
-        </div>
+          <div class="alert alert-info">
+            {% if is_owner %}
+            You have not created any projects yet.
+            {% else %}
+            This user does not have any public projects.
+            {% endif %}
+          </div>
         {% else %}
-        <table class="table table-striped table-vertical">
-          <thead>
-            <tr>
-              <th>Project</th>
-              <th style="text-align: center;">Messages</th>
-              <th style="text-align: center;">Channels</th>
-              <th style="text-align: center;">Hooks</th>
-              {% if is_owner %}
-              <th></th>
-              {% endif %}
-            </tr>
-          </thead>
-          <tbody>
-            {% for project in projects %}
-            {{ row(project) }}
-            {% endfor %}
-          </tbody>
-        </table>
+          {% for project in projects %}
+          <div class="project">
+            {% if not project.public %}
+            <i class="icon-lock icon-2x pull-left icon-muted"></i>
+            {% endif %}
+            <div class="pull-left">
+              <div class="name">
+                <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+                  {{ project.name }}
+                </a>
+              </div>
+              <div class="desc">
+                <small>Created {{ project.created|pretty }}</small>
+              </div>
+            </div>
+            <div class="metric pull-right">
+              <i class="icon-envelope"></i> {{ project.message_count }}
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          {% endfor %}
         {% endif %}
       </div>
     </section>
